--- a/labs/lab-7/lab-7.adoc
+++ b/labs/lab-7/lab-7.adoc
@@ -49,13 +49,13 @@
 При кліку на кнопку повинно відкритися модальне вікно, в якому юзер має підтвердити видалення користувача: "Ви дійсно бажаєте видалити учасника {{name}}, {{email}}?".
 Нижче розмістити кнопки "Так" (видаляє учасника), "Ні" (просто закриває модальне вікно).
 ** Сортування.
-У таблиці учасників додати можливість сортувати за іменем та датою народження.
-Додати відповідні контроли, які реагуватимуть на дїї користувача.
+У таблиці учасників додати можливість сортувати за іменем (A-Z) та датою народження.
+Додати відповідні контроли з іконками, наприклад, https://icons.getbootstrap.com/icons/sort-alpha-down/[Sort alpha down], https://icons.getbootstrap.com/icons/sort-down/[Sort down], які реагуватимуть на дїї користувача.
 ** Фільтрація.
 Додати поле для пошуку учасників за іменем.
 Це поле повинно бути в окремому компоненті SearchBar, який передає подію filter-by-name до батьківського компонента, і фільтрує список у таблиці на основі введених даних.
 ** Унікальність e-mail.
 Перед додаванням учасника в таблицю, потрібно перевірити, чи існує вже учасник з такою ж електронною поштою.
 Якщо такий учасник є, потрібно вивести повідомлення про помилку.
-** Додати ключові модифікатори для прослуховування подій клавіатури (коли юзер натискає enter на клавіатурі при роботі з формою реєстрації) так escape, щоб закрити мождальне вікно.
+** Додати ключові модифікатори для прослуховування подій клавіатури (коли юзер натискає enter на клавіатурі при роботі з формою реєстрації) та Esc, щоб закрити модальне вікно.
 
