--- a/labs/lab-7/lab-7.adoc
+++ b/labs/lab-7/lab-7.adoc
@@ -2,7 +2,7 @@
 
 *Тема:* Основи роботи з компонентами: props, event handling, watchers
 
-*Мета:* засвоїти основи роботи з компонентами у Vue.js, зокрема використання props, event handling, watchers.
+*Мета:* засвоїти основи роботи з компонентами у Vue.js, зокрема з передачею даних між компонентами через props, обробкою подій у компонентах (event handling), а також з використанням watchers для відстеження змін у стані застосунку.
 
 *Вимоги до звіту:*
 
@@ -11,6 +11,8 @@
 . Дотримання TypeScript-типізації;
 . Використання Composition Api або Options Api на вибір студента;
 . Під час написання застосунку, обов'язково дотримуватись https://ua.vuejs.org/style-guide/[style guide];
+. Якщо ви використовуєте css бібліотеку, то імпортуйте тільки необхідні стилі (базові, кнопки, таблиці, поля тощо).
+Виористовуйте scss.
 . Використовуйте Eslint;
 . Заборонено використовувати alert для показу помилок юзеру.
 
@@ -46,7 +48,7 @@
 Модальне вікно повинно бути в окремому компоненті Modal (css стилі можна взяти з обраної UI бібліотеки).
 ** Видалення учасника.
 Додати в кінці таблиці ще один стовпець, де розмістити кнопку "Видалити учасника".
-При кліку на кнопку повинно відкритися модальне вікно, в якому юзер має підтвердити видалення користувача: "Ви дійсно бажаєте видалити учасника {{name}}, {{email}}?".
+При кліку на кнопку повинно відкритися модальне вікно, в якому юзер має підтвердити видалення користувача: "Ви дійсно бажаєте видалити учасника "participant name", "participant email"?".
 Нижче розмістити кнопки "Так" (видаляє учасника), "Ні" (просто закриває модальне вікно).
 ** Сортування.
 У таблиці учасників додати можливість сортувати за іменем (A-Z) та датою народження.
