Added lab-8 - routing

--- a/labs/lab-6/lab-6.adoc
+++ b/labs/lab-6/lab-6.adoc
@@ -2,11 +2,12 @@
 
 *Тема:* Основи роботи з компонентами: обчислювані властивості, обробка подій, прив'язування елементів форми
 
-*Мета:* засвоїти основи роботи з компонентами у Vue.js, зокрема використання обчислюваних властивостей, обробки подій, та прив'язування елементів форми. Навчитися створювати інтерактивні компоненти, що реагують на дії користувача, управляють даними у формах та ефективно використовують реактивність через обчислювані властивості.
+*Мета:* засвоїти основи роботи з компонентами у Vue.js, зокрема використання обчислюваних властивостей, обробки подій, та прив'язування елементів форми.
+Навчитися створювати інтерактивні компоненти, що реагують на дії користувача, управляють даними у формах та ефективно використовують реактивність через обчислювані властивості.
 
 *Вимоги до звіту:*
 
-. Лабораторна роба повинна бути виконана окремому github репозиторію студента, з назвою vue-lottery-app.
+. Лабораторна робота повинна бути виконана окремому github репозиторію студента, з назвою vue-lottery-app.
 . Дотримання TypeScript-типізації;
 . Використання Composition Api або Options Api на вибір студента;
 . Під час написання застосунку, обов'язково дотримуватись https://ua.vuejs.org/style-guide/[style guide];
@@ -30,7 +31,8 @@
 
 === Завдання:
 
-Створити застосунок лотерею. Лотерея повинна містити 3 блоки:
+Створити застосунок лотерею.
+Лотерея повинна містити 3 блоки:
 
 . Блок переможців;
 . Блок з формою реєстрації нових учасників;
@@ -45,10 +47,13 @@ image::design/1-initial-screen.jpg[]
 +
 image::design/2-validation-success.jpg[]
 image::design/3-validation-error.jpg[]
-. Для поля з датою виокористовуйте https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/date[input date], додаткова стилізація календаря не потрібна. Формат дати yyyy-mm-dd. Дата народження не повинна бути у майбутньому, при цьому вивести юзеру помилку.
+. Для поля з датою виокористовуйте https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/date[input date], додаткова стилізація календаря не потрібна.
+Формат дати yyyy-mm-dd.
+Дата народження не повинна бути у майбутньому, при цьому вивести юзеру помилку.
 +
 image::design/4-input-date.jpg[]
-. Натиснувши кнопку «Save», необхідно додати учасника до таблиці - списку учасників та очистити форму реєстрації. При очищенні форми не повинна спрацьовувати валідація полів.
+. Натиснувши кнопку «Save», необхідно додати учасника до таблиці - списку учасників та очистити форму реєстрації.
+При очищенні форми не повинна спрацьовувати валідація полів.
 +
 image::design/6-table-and-winners.jpg[]
 
