--- a/labs/lab-project/lab-project.adoc
+++ b/labs/lab-project/lab-project.adoc
@@ -1,21 +1,24 @@
-= Лабораторна робота №9-10
+= Лабораторна робота №9-10 (team course project)
 
 *Тема:* Розробка e-commerce застосунку базі API Platzi Fake Store
 
-*Мета:* розробити застосунку для електронної комерції, який використовує API Platzi Fake Store для отримання, фільтрації та відображення продуктів.
+*Мета:* розробити застосунку для електронної комерції, який використовує API Platzi Fake Store з використанням axios та pinia.
 
 *Вимоги до звіту:*
 
-. Лабораторна робота повинна бути виконана *в новому репозиторію* vue-ecommerce-app github репозиторію студента.
-. При написанні застосунку, використати паттерн репозиторій (Repository).
-. Дотримання TypeScript-типізації;
-. Використання Composition Api або Options Api на вибір студента;
-. Під час написання застосунку, обов'язково дотримуватись https://ua.vuejs.org/style-guide/[style guide];
+. Лабораторна робота повинна бути виконана *в окремому репозиторію* з назвою *vue-ecommerce-app*.
+. Винести окремо шар з API в окремі ендпойнти.
+. Використовувати ендпойнти в store в actions.
+. Для управляння станом використовуйте Pinia.
+. Викликати actions тільки в компонентах.
+. Дотримання TypeScript-типізації (окрема директорія types).
+. При зміні роуту не забуваємо про https://router.vuejs.org/guide/advanced/scroll-behavior[Scroll Behavior].
+. Використання Composition Api.
+. Під час написання застосунку, обов'язково дотримуватись https://ua.vuejs.org/style-guide/[style guide].
 . Якщо ви використовуєте css бібліотеку, то імпортуйте тільки необхідні стилі (базові, кнопки, таблиці, поля тощо).
 Виористовуйте scss.
-. Використовуйте Eslint;
-. Для управляння станом ввиокритовуйте Pinia.
-. Завершений проєкт повинен бути завантажений на GitHub та gh-pages з детальною документацією щодо встановлення та використання.
+. Використовуйте Eslint.
+. Завершений проєкт повинен бути завантажений на GitHub та gh-pages з детальною документацією щодо встановлення та використання e-commerce застосунку.
 
 == Практична частина
 
@@ -26,9 +29,15 @@
 ** Налаштуйте базову структуру проєкту, включаючи компоненти, ui-бібліотеки, маршрутизацію та стани.
 ** Виконайте інтеграцію з REST API Platzi Fake Store.
 Забезпечте обробку помилок при запитах до API.
+Виведіть відповідні помилки при запитах до API на ui юзеру.
 ** Реалізуйте пагінацію для списку продуктів.
 Додайте кнопки "Наступна" та "Попередня" для навігації між сторінками.
 ** Додайте можливість фільтрації товарів за назвою (введення в текстове поле), ціною (введення мінімальної та максимальної ціни), категорією (вибір з випадаючого списку).
 Всі параметри фільтрації повинні зберігатися в URL.
+** Реалізуйте кошик товарів (cart).
+** Реалізуйте список улюбленого (favorites).
+** Кошик товарів та список улюбленого повинен зберігатися у localStorage.
+** Реалізуйте сторінку 404.
 ** Створіть простий і зрозумілий інтерфейс.
+** У футері зазначити список студентів з team (ПІБ, № групи, посилання на GitHub profile).
 Використовуйте CSS-фреймворки (Bootstrap або Tailwind CSS на вибір студента) для стилізації.
