--- a/labs/lab-3/lab-3.adoc
+++ b/labs/lab-3/lab-3.adoc
@@ -18,7 +18,7 @@
 
 == Практична частина
 
-=== Обовязкові завдання:
+=== Обов'язкові завдання:
 
 . Додати робочі файли для розробки (директорія lab-app) в свій локальний репозиторій.
 . Ознайомитись з архітектурою проєкту.
