--- a/labs/lab-4/lab-4.adoc
+++ b/labs/lab-4/lab-4.adoc
@@ -1,6 +1,6 @@
 = Лабораторна робота №4
 
-*Тема:* якість коду (code quality) та автоматичне тестування веб-затосунків.
+*Тема:* якість коду (code quality) та автоматичне тестування вебзастосунків.
 
 *Мета:* впровадити ESLint та Prettier для дотримання єдиного стилю коду.
 Налаштувати та використовувати ці інструменти для перевірки та форматування свого коду.
