Updated intro presentation

--- a/vuejs/01-intro/example/js-framework/description.adoc
+++ b/vuejs/01-intro/example/js-framework/description.adoc
@@ -1,4 +1,4 @@
-. Налаштування базової структуру проєкту.
+. Налаштування базової структури проєкту.
 Створимо необхідні файли та структуру каталогів для розробки фреймворку.
 +
 ----
